@@ -466,5 +466,5 @@ jpellerin+nose@gmail.com
 .SH COPYRIGHT
 LGPL
 
-.\" Generated by docutils manpage writer on 2011-03-27 11:56.
+.\" Generated by docutils manpage writer on 2011-04-01 12:50.
 .\" 
